--- a/vhost.conf
+++ b/vhost.conf
@@ -32,7 +32,7 @@ server {
     location ~ \.php$ {
         fastcgi_pass   127.0.0.1:9000;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME/var/www/YOURDOMAIN.com/public/$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$1;
         include        fastcgi_params;
         }
 } # EO HTTP server
